force-app/main/default/objects/Trace_Sale__c/Trace_Sale__c.object-meta.xml
<CustomObject>
    <label>Trace Sale</label>
    <nameField>
        <label>Trace Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trace Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>