force-app/main/default/objects/Trace_Sale__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trace Sales</relationshipLabel>
    <relationshipName>Trace_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>