force-app/main/default/objects/Trace_Sale__c/fields/Buying_Group__c.field-meta.xml
<CustomField>
    <fullName>Buying_Group__c</fullName>
    <label>Buying Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>