force-app/main/default/objects/Trace_Sale__c/fields/COGS_Pc__c.field-meta.xml
<CustomField>
    <fullName>COGS_Pc__c</fullName>
    <label>COGS/Pc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>