force-app/main/default/objects/Trace_Sale__c/fields/Contract_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name_Number__c</fullName>
    <label>Contract Name/Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>