force-app/main/default/objects/Trace_Sale__c/fields/Cost_Column__c.field-meta.xml
<CustomField>
    <fullName>Cost_Column__c</fullName>
    <label>Cost Column</label>
    <length>255</length>
    <type>Text</type>
</CustomField>