force-app/main/default/objects/Trace_Sale__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Distributor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>