force-app/main/default/objects/Trace_Sale__c/fields/Distributor_BP_Key__c.field-meta.xml
<CustomField>
    <fullName>Distributor_BP_Key__c</fullName>
    <label>Distributor BP Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>