force-app/main/default/objects/Trace_Sale__c/fields/Distributor_Code__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Code__c</fullName>
    <label>Distributor Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>