force-app/main/default/objects/Trace_Sale__c/fields/Distributor_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Invoice_Date__c</fullName>
    <label>Distributor Invoice Date</label>
    <type>Date</type>
</CustomField>