force-app/main/default/objects/Trace_Sale__c/fields/Distributor_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Invoice_Number__c</fullName>
    <label>Distributor Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>