force-app/main/default/objects/Trace_Sale__c/fields/Forecast_Customer__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Customer__c</fullName>
    <label>Forecast Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>