force-app/main/default/objects/Trace_Sale__c/fields/GPO_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GPO_Fee_Percentage__c</fullName>
    <label>GPO Fee Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>