force-app/main/default/objects/Trace_Sale__c/fields/Price_pc__c.field-meta.xml
<CustomField>
    <fullName>Price_pc__c</fullName>
    <label>Price (pc)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>