force-app/main/default/objects/Trace_Sale__c/fields/Product_Key__c.field-meta.xml
<CustomField>
    <fullName>Product_Key__c</fullName>
    <label>Product Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>