force-app/main/default/objects/Trace_Sale__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product  Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>