force-app/main/default/objects/Trace_Sale__c/fields/Qty_pcs__c.field-meta.xml
<CustomField>
    <fullName>Qty_pcs__c</fullName>
    <label>Qty (pcs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>