force-app/main/default/objects/Trace_Sale__c/fields/Revenue_Net__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Net__c</fullName>
    <label>Revenue (Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>