force-app/main/default/objects/Trace_Sale__c/fields/Sales_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Sales_Responsibility__c</fullName>
    <label>Sales Responsibility</label>
    <length>100</length>
    <type>Text</type>
</CustomField>