force-app/main/default/objects/Trace_Sale__c/fields/SAP_Code_Formatted__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code_Formatted__c</fullName>
    <label>SAP Code Formatted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>