force-app/main/default/objects/Trace_Sale__c/fields/Total_Distribution_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Distribution_Fees__c</fullName>
    <label>Total Distribution Fees</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>