force-app/main/default/objects/Trace_Sale__c/fields/Total_GPO_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_GPO_Fees__c</fullName>
    <label>Total GPO Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>