force-app/main/default/objects/Trace_Sale__c/fields/Trace_Account_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Trace_Account_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trace Account Mapping</label>
    <referenceTo>Trace_Account_Mapping__c</referenceTo>
    <relationshipLabel>Trace Sales</relationshipLabel>
    <relationshipName>Trace_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>