force-app/main/default/objects/Trace_Sale__c/fields/UOM_QTY__c.field-meta.xml
<CustomField>
    <fullName>UOM_QTY__c</fullName>
    <label>UOM QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>